--- a/SnapScrollExamples01/SnapScrollExamples01.Windows/MainPage.xaml
+++ b/SnapScrollExamples01/SnapScrollExamples01.Windows/MainPage.xaml
@@ -7,7 +7,81 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <DataTemplate x:Key="ListViewTileTemplate">
+            <Rectangle x:Name="ItemRectangle"
+                       Fill="Coral"
+                       Height="300"
+                       Width="500"
+                       />
+        </DataTemplate>
+        <Style x:Key="MyListViewTileStyle"  TargetType="ListViewItem">
+            <Setter Property="FontFamily" Value="Segoe UI" />
+            <Setter Property="Background" Value="DarkOliveGreen" />
+            <Setter Property="Height" Value="400" />
+            <Setter Property="Width" Value="600" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Margin" Value="0,0,8,8" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="TabNavigation" Value="Local" />
+        </Style>
+    </Page.Resources>
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <GridView x:Name="TopLeft"
+                  Grid.Row="0"
+                  Grid.Column="0">
+            
+        </GridView>
+        <GridView x:Name="TopRight"
+                  Grid.Row="0"
+                  Grid.Column="1">
+
+        </GridView>
+        <ListView x:Name="BottomLeft"
+                  Grid.Row="1"
+                  Grid.Column="0"
+                  ItemTemplate="{StaticResource ListViewTileTemplate}"
+                  ItemContainerStyle="{StaticResource MyListViewTileStyle}"
+                  Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
+                  BorderBrush="DeepPink"
+                  BorderThickness="2"
+                  ShowsScrollingPlaceholders="False"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                  SelectionMode="None">
+        </ListView>
+        <ListView x:Name="BottomRight"
+                  Grid.Row="1"
+                  Grid.Column="1"
+                  ItemTemplate="{StaticResource ListViewTileTemplate}"
+                  ItemContainerStyle="{StaticResource MyListViewTileStyle}"                  
+                  Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
+                  BorderBrush="DeepPink"
+                  BorderThickness="2"
+                  ShowsScrollingPlaceholders="False"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                  ScrollViewer.VerticalScrollMode="Disabled"
+                  ScrollViewer.HorizontalScrollMode="Enabled"
+                  SelectionMode="None">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <VirtualizingStackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+
+        </ListView>
 
     </Grid>
 </Page>
