--- a/SnapScrollExamples01/SnapScrollExamples01.Windows/MainPage.xaml
+++ b/SnapScrollExamples01/SnapScrollExamples01.Windows/MainPage.xaml
@@ -9,11 +9,32 @@
 
     <Page.Resources>
         <!--Height="200" Width="400"-->
+        <DataTemplate x:Key="MyFlipViewTileTemplate">
+            <Rectangle x:Name="ItemRectangle"
+                       Fill="Coral"
+                       Height="200" Width="400"
+                       />
+        </DataTemplate>
+        <!--<Setter Property="Height" Value="300" />
+        <Setter Property="Width" Value="500" />-->
+        <Style x:Key="MyFlipViewTileStyle" TargetType="FlipViewItem">
+            <Setter Property="FontFamily" Value="Segoe UI"/>
+            <Setter Property="Background" Value="DarkOliveGreen"/>
+            <Setter Property="Height" Value="300" />
+            <Setter Property="Width" Value="500" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Margin" Value="0,0,8,8" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="TabNavigation" Value="Local" />
+        </Style>
+        
+        <!--Height="200" Width="400"-->
         <DataTemplate x:Key="MyListViewTileTemplate">
             <Rectangle x:Name="ItemRectangle"
                        Fill="Coral"
-                       Height="200"
-                       Width="400"
+                       Height="200" Width="400"
                        />
         </DataTemplate>
         <!--<Setter Property="Height" Value="300" />
@@ -58,47 +79,48 @@
 
         <!--Style="{StaticResource MyVerticalScrollViewerStyle}"-->
         <Style x:Key="MyVerticalScrollViewerStyle" TargetType="ScrollViewer">
-            <!--<Setter Property="VerticalScrollMode" Value="Enabled"/>-->
+            <Setter Property="VerticalScrollMode" Value="Enabled"/>
             <Setter Property="VerticalSnapPointsAlignment" Value="Near"/>
             <Setter Property="VerticalSnapPointsType" Value="MandatorySingle"/>
+            <Setter Property="Background" Value="{StaticResource ApplicationPageBackgroundThemeBrush}"/>
+            <Setter Property="BorderBrush" Value="DeepPink"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <!--<Setter Property="ZoomMode" Value="Disabled"/>-->
+        </Style>
+
+        <Style x:Key="MyScrollContentPresenterStyle" TargetType="ScrollContentPresenter">
+            <Setter Property="ScrollViewer.ZoomMode" Value="Disabled"/>
         </Style>
         
-        <!--TODO bug wrong code-->
+        <Style x:Key="MyItemsPanelStyle" TargetType="ItemsStackPanel">
+            <Setter Property="ScrollViewer.ZoomMode" Value="Disabled"/>
+        </Style>
+        
         <Style x:Key="MyItemsControlStyle" TargetType="ItemsControl">
-            <Setter Property="ItemsPanel">
+            <!--<Setter Property="ItemsPanel" Value="{StaticResource MyItemsPanelStyle}"/>-->
+            <!--<Setter Property="ItemsPanel">
                 <Setter.Value>
-                    <ItemsPanelTemplate>
-                        <VirtualizingStackPanel Orientation="Vertical"/>
+                    <ItemsPanelTemplate x:Name="SnappingItemsPanel">
+                        --><!--<ItemsControl x:Name="SnappingItemsControl"/>-->
+                        <!--<ItemsPresenter x:Name="SnappingItemsPresenter"/>-->
+                        <!--<StackPanel x:Name="SnappingStackPanel"
+                                    ScrollViewer.ZoomMode="Disabled"/>--><!--
+                        <VirtualizingStackPanel x:Name="SnappingVirtualizingStackPanel"
+                                                ScrollViewer.ZoomMode="Disabled"/>
                     </ItemsPanelTemplate>
                 </Setter.Value>
-            </Setter>
+            </Setter>-->
+            <!--<Setter Property="ScrollViewer.ZoomMode" Value="Disabled"/>-->
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ItemsControl">
-                        <ScrollViewer x:Name="NormalScrollViewer"
-                                      VerticalSnapPointsAlignment="Near"
-                                      VerticalSnapPointsType="MandatorySingle"
-                                      Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
-                                      BorderBrush="DeepPink"
-                                      BorderThickness="2">
-                            <StackPanel>
-                                <Rectangle Height="150" Width="250" Fill="Tomato" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="Violet" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="Lime" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="Brown" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="Cyan" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="Gold" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="DarkGreen" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="DarkOrange" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="DodgerBlue" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="DimGray" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="HotPink" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="GreenYellow" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="Black" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="MediumSpringGreen" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Rectangle Height="150" Width="250" Fill="Salmon" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                            </StackPanel>                            
-                        </ScrollViewer>
+                        <!--<ItemsPresenter x:Name="SnappingItemsPresenter" 
+                                        ScrollViewer.VerticalScrollMode="Disabled" 
+                                        ScrollViewer.ZoomMode="Disabled"/>-->
+                        <!--<StackPanel x:Name="SnappingStackPanel"/>-->
+                        <!--<ScrollViewer x:Name="SnappingScrollViewer"
+                                      Width="500" Height="500"
+                                      Style="{StaticResource MyVerticalScrollViewerStyle}"/>-->
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -109,16 +131,19 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <!--## Left to Right ## :: ## Up and Down ##
-            NormalGridView      :: NormalListView
+        <!--## Left to Right ## :: ## Up and Down ##  :: ## Left to Right ##
+            NormalGridView      :: NormalListView     :: NormalFlipView
             HorizontalListView  :: VerticalGridView
             ## Left to Right ## :: ## Up and Down ##
         -->
+        <!--NormalView-->
         <GridView x:Name="NormalGridView"
                   Grid.Row="0"
                   Grid.Column="0"
@@ -138,15 +163,22 @@
             </GridView.ItemsPanel>
         </GridView>
 
+        <!--Create custom class derived from ItemsControl and implement IScrollSnapPointsInfo interface.
+            Create custom style for items control and set HorizontalSnapPointsType property on ScrollViewer inside the style.-->
         <!--Height="300" Width="500"   Height="150" Width="250"-->
         <!--VerticalSnapPointsAlignment="Near"
                       VerticalSnapPointsType="MandatorySingle"-->
+        <!--ScrollViewer Style="{StaticResource MyVerticalScrollViewerStyle}"-->
         <!--ItemsControl Style="{StaticResource MyItemsControlStyle}"-->
         <!--local:SnappingItemsControl-->
-        <ItemsControl Grid.Row="1"
+        <ScrollViewer x:Name="NormalScrollViewer"
+                      Grid.Row="1"
                       Grid.Column="1"
-                      Style="{StaticResource MyItemsControlStyle}" >
-                <!--<Rectangle Height="150" Width="250" Fill="Tomato" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                      Style="{StaticResource MyVerticalScrollViewerStyle}">
+            <ScrollContentPresenter x:Name="SnappingScrollContentPresenter"
+                                    Style="{StaticResource MyScrollContentPresenterStyle}">
+            <ItemsControl Style="{StaticResource MyItemsControlStyle}">
+                <Rectangle Height="150" Width="250" Fill="Tomato" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 <Rectangle Height="150" Width="250" Fill="Violet" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 <Rectangle Height="150" Width="250" Fill="Lime" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 <Rectangle Height="150" Width="250" Fill="Brown" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -160,8 +192,10 @@
                 <Rectangle Height="150" Width="250" Fill="GreenYellow" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 <Rectangle Height="150" Width="250" Fill="Black" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 <Rectangle Height="150" Width="250" Fill="MediumSpringGreen" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <Rectangle Height="150" Width="250" Fill="Salmon" HorizontalAlignment="Left" VerticalAlignment="Top"/>-->
-        </ItemsControl>
+                <Rectangle Height="150" Width="250" Fill="Salmon" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            </ItemsControl>
+            </ScrollContentPresenter>
+        </ScrollViewer>
         <!--<ListView></ListView>-->
         
         <GridView x:Name="VerticalGridView"
@@ -256,6 +290,52 @@
             </local:SnappingItemsControl>
         </ScrollViewer>-->
         
+        <!--<Style x:Key="MyItemsControlStyle" TargetType="ItemsControl">
+            <Setter Property="ItemsPanel">
+                <Setter.Value>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel Orientation="Vertical"/>
+                    </ItemsPanelTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ItemsControl">
+                        <ScrollViewer x:Name="NormalScrollViewer"
+                                      VerticalSnapPointsAlignment="Near"
+                                      VerticalSnapPointsType="MandatorySingle"
+                                      Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
+                                      BorderBrush="DeepPink"
+                                      BorderThickness="2">
+                            <StackPanel>
+                                <Rectangle Height="150" Width="250" Fill="Tomato" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="Violet" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="Lime" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="Brown" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="Cyan" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="Gold" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="DarkGreen" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="DarkOrange" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="DodgerBlue" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="DimGray" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="HotPink" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="GreenYellow" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="Black" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="MediumSpringGreen" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <Rectangle Height="150" Width="250" Fill="Salmon" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            </StackPanel>
+                        </ScrollViewer>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <ItemsControl Grid.Row="1"
+                      Grid.Column="1"
+                      Style="{StaticResource MyItemsControlStyle}" >
+
+        </ItemsControl>-->
+
+        <!--NormalView-->
         <ListView x:Name="NormalListView"
                   Grid.Row="0"
                   Grid.Column="1"
@@ -269,7 +349,21 @@
                   ScrollViewer.HorizontalScrollBarVisibility="Auto"
                   SelectionMode="None">
         </ListView>
-        
+
+        <!--NormalView-->
+        <FlipView x:Name="NormalFlipView"
+                  Grid.Row="0"
+                  Grid.Column="2"
+                  ItemTemplate="{StaticResource MyFlipViewTileTemplate}"
+                  ItemContainerStyle="{StaticResource MyFlipViewTileStyle}"
+                  Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
+                  BorderBrush="DeepPink"
+                  BorderThickness="2"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                  >
+        </FlipView>    
+
         <ListView x:Name="HorizontalListView"
                   Grid.Row="1"
                   Grid.Column="0"
